--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<name>PatchEngine</name>
-	<url></url>
+	<url>https://github.com/MazeXD/PatchEngine/</url>
 
 	<parent>
 		<groupId>net.md-5</groupId>
